2010-09-12  MIYAMUKO Katsuyuki  <miyamuko@gmail.com>

	* src : add optional value parameter to si:putenv.
	引数を環境変数名とオプショナルな値をとるように変更。
	値を省略した場合や nil を指定した場合は環境変数を削除する。
	戻り値は環境変数の設定に成功した場合は設定した値を返し、
	環境変数を削除した場合または設定に失敗した場合は nil を返すように変更。
	(si:putenv "FOO" "bar")
	=> "bar"
	(si:putenv "FOO")
	=> nil
	(si:putenv "=FOO" "bar")
	=> nil

2010-09-11  NANRI Masaoki  <southly@gmail.com>

	* src : remove redefinition.
	Microsoft Visual C++ 2010 では wingdi.h がインクルードされて、
	tagWCRANGE と tagGLYPHSET が定義されるようなので gen-fontrange.cc での
	定義を削除。
	とりあえずVC2010でのみ削除。

	* src : remove pragma optimize.
	「internal compiler error」対策とのコメントがあるが、Microsoft Visual
	C++ 2010 ではエラーが発生しないので削除。
	とりあえずVC2010でのみ削除。

	* src : add si:putenv.
	si:putenv を追加。
	via http://d.hatena.ne.jp/miyamuko/20100910/xyzzy_putenv

2010-08-31  NANRI Masaoki  <southly@gmail.com>

	* src : fix call-process.
	call-processの標準入力・標準出力等の指定がうまく設定されない現象がおき
	ていたのを修正。

2010-07-14  NANRI Masaoki  <southly@gmail.com>

	* src : fix format "~T".
	「~colnum,colincT」のとき、「colnum+k*colinc」を満たす最小の正の整数kで
	桁を求めるように修正。
	(format nil "~0,1T")
	=> " "

	* src : fox format "~VT" in the case of being provided '() as a prefix parameter.
	Vに引数としてnilを渡したときの動作を修正。
	(format t "~VA" nil 'x)
	== (format t "~A" 'x)

	* src : fix for VC2010.
	Microsoft Visual C++ 2010 でのビルド用に修正。
	Makefileの修正のみ。

2010-04-04  NANRI Masaoki  <southly@gmail.com>

	* src : add repl.
	コマンドプロンプトを表示するバージョンxyzzyrpl.exeを作成できるようにし
	た。「nmake repl」で作成できる。

	;;; 簡易REPL
	(defun repl ()
	  (interactive)
	  (let ((*standard-input* *terminal-io*)
	        (*standard-output* *terminal-io*))
	    (loop
	      (format t "~%> ")
	      (format t "~A" (eval (read *standard-input*))))))

2010-03-01  NANRI Masaoki  <southly@gmail.com>

	* src : fix "*load-pathname*" initialization.
	ダンプ作成時にロードしたファイル名がそのままダンプファイルに保存される
	ようなので、起動時にも初期化するように修正。

	* src : fix format "~F".
	formatの"~F"の第一パラメータwを指定しないと第三パラメータkが機能しない
	のを修正。

	(dotimes (i 10)
	  (format t "~,,VF~%" i pi))
	3.141592653589793
	31.41592653589793